# CS542-Project

./: .gitignore  README.md  low  low_compute.cpp
code/: CMakeLists.txt  all_to_all.cpp  count_prime.cpp  temp.txt
code/C/: CMakeLists.txt
code/C/runscripts/: run_Aureolin.sh  run_Celeste.sh  run_desktop.sh  run_hopper.sh
code/C/src/: all_to_all
code/Python/: README.md  analysis.ipynb
code/runscripts/: run_Aureolin.sh  run_Celeste.sh  run_desktop.sh
code/src/: all_to_all.cpp  count_primes.cpp
figures/draft/: README.md
figures/final/: temp.txt
report/final_report/: main.tex  references.bib
report/final_report/tables/: README.md
report/proposal/: main.tex  references.bib
results/: aggregated.csv  run_Aureolin.out  run_Celeste.out  run_hopper.out  run_leda.out  run_leda_16.out  run_mack.out  run_ocotillo.out  run_sahu.out  run_wheeler.out  run_xena.out  run_yucca.out
